# hackers-project02

./: CNAME  Cargo.toml  README.md  app.js  index.html  styles.css
lambda/: .gitignore  Cargo.toml  README.md  deploy.sh
lambda/src/: checkin.rs  database_service.rs  db.rs  main.rs
lambda/src/models/: checkin.rs  mod.rs  user.rs
