[package]
name = "barbuddy-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
aws-config = { version = "1.5.8", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.50.0"
aws-smithy-types = "1.2.7"
axum = "0.7"
chrono = "0.4.38"
lambda_http = "0.13.0"
lambda_runtime = "0.13.0"
serde = "1.0.196"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
serde_dynamodb = "0.9.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.6.1", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
